refactor cmake files; add jsoncpp as external project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,26 +1,22 @@
 cmake_minimum_required(VERSION 3.6)
 project (jsonserializer)
- 
-set (PROJECT_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
-set (PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
- 
+
+# -- setup structure generator 
 # check for generator flags
 if(NOT GENERATED_DIRECTORY)
-    set (GENERATED_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/generated)
+    message(FATAL_ERROR "Please specify a output directory for your structures!")
 endif()
 if(NOT GENERATED_HEADER)
-    set (GENERATED_HEADER ${CMAKE_CURRENT_SOURCE_DIR}/include/generated.h)
+    message(FATAL_ERROR "Please specify a filename for your generated headerfile for your structures!")
 endif()
 if(NOT JSON_FILE)
     message(FATAL_ERROR "Please specify a JSON template for your structures!")
 endif()
- 
-# TODO: maybe another solution to get the generator script
-file (GLOB GENERATOR *.py)
+
 # execute generator at configuration time to provide actual output files to the linker (?)
 execute_process(
 COMMAND "python" 
-"${GENERATOR}" 
+"${PROJECT_SOURCE_DIR}/DataStructureGenerator.py" 
 "--json=${JSON_FILE}" 
 "--output=${GENERATED_DIRECTORY}" 
 "--header=${GENERATED_HEADER}"
@@ -29,27 +25,35 @@ COMMAND "python"
 if(${result})
     message (FATAL_ERROR "Structure generation failed!")
 endif()
+# -------------
 
-set(SERIALIZER_SOURCES
-${PROJECT_SOURCE_DIR}/Serializable.cpp 
-${PROJECT_SOURCE_DIR}/PersistingService.cpp
-)
- 
+
+# set include directories
+include_directories(${PROJECT_SOURCE_DIR}/include ${PROJECT_SOURCE_DIR})
+# set sources
 file(GLOB GENERATED_SOURCES ${GENERATED_DIRECTORY}/*.cpp)
+set(SOURCES 
+${GENERATED_SOURCES}
+${PROJECT_SOURCE_DIR}/src/Serializable.cpp 
+${PROJECT_SOURCE_DIR}/src/PersistingService.cpp
+)
+
+
+# include jsoncpp
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR}/modules)
+include("Jsoncpp.cmake")
+
+# build library
+add_library(${PROJECT_NAME} STATIC ${SOURCES})
+target_include_directories (${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR})
+target_link_libraries(${PROJECT_NAME} "jsoncpp")
 
 # generator will be executed every time the lib is built
 add_custom_target(python_generator 
 COMMAND "python" 
-"${GENERATOR}" 
+"${PROJECT_SOURCE_DIR}/DataStructureGenerator.py"
 "--json=${JSON_FILE}" 
 "--output=${GENERATED_DIRECTORY}" 
 "--header=${GENERATED_HEADER}"
 )
-
-include_directories(${PROJECT_INCLUDE_DIR})
-include_directories(${CMAKE_CURRENT_SOURCE_DIR})
-
-add_library(${PROJECT_NAME} STATIC ${SERIALIZER_SOURCES} ${GENERATED_SOURCES})
-target_include_directories (${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 add_dependencies(${PROJECT_NAME} python_generator)
-
