--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,15 +9,6 @@ project (${JSON_SERIALIZER_NAME})
 # -- setup structure generator 
 # check for generator flags
 if(NOT WITHOUT_STRUCTS)
-    if(NOT GENERATED_NAMESPACE)
-        message(FATAL_ERROR "Please specify a namespace for your structures (GENERATED_NAMESPACE)!")
-    endif()
-    if(NOT GENERATED_DIRECTORY)
-        message(FATAL_ERROR "Please specify a output directory for your structures (GENERATED_DIRECTORY)!")
-    endif()
-    if(NOT GENERATED_HEADER)
-        message(FATAL_ERROR "Please specify a filename for your generated headerfile for your structures (GENERATED_HEADER)!")
-    endif()
     if(NOT JSON_FILE)
         message(FATAL_ERROR "Please specify a JSON template for your structures (JSON_FILE)!")
     endif()
@@ -27,35 +18,23 @@ if(NOT WITHOUT_STRUCTS)
         COMMAND "python" 
         "${PROJECT_SOURCE_DIR}/DataStructureGenerator.py" 
         "--json=${JSON_FILE}" 
-        "--output=${GENERATED_DIRECTORY}" 
-        "--header=${GENERATED_HEADER}"
-        "--namespace=${GENERATED_NAMESPACE}"
     )
 
     if(${result})
         message (FATAL_ERROR "Structure generation failed!")
     endif()
-    
-    # set sources
-    file(GLOB GENERATED_SOURCES ${GENERATED_DIRECTORY}/*.cpp)
-    set(SOURCES ${SOURCES} ${GENERATED_SOURCES})
 endif()
 # -------------
 
 
 # set include directories
 include_directories(${PROJECT_SOURCE_DIR}/jsonserializer ${PROJECT_SOURCE_DIR})
-set(SOURCES 
-    ${SOURCES}
-    ${PROJECT_SOURCE_DIR}/src/Serializable.cpp 
-    ${PROJECT_SOURCE_DIR}/src/PersistingService.cpp
-)
-
+file(GLOB_RECURSE SOURCES *.cpp)
 
 # include jsoncpp
 include("Jsoncpp.cmake")
 
 # build library
 add_library(${PROJECT_NAME} STATIC ${SOURCES})
-target_include_directories (${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR})
+target_include_directories (${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/generated)
 target_link_libraries(${PROJECT_NAME} "jsoncpp")
