--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.6)
 
 project(example)
 set(JSON_OUTPUT_DIR generated/)
-set(JSON_CONFIGURATION_FILES sample.json sample2.json)
+set(JSON_CONFIGURATION_FILES ${PROJECT_SOURCE_DIR}/sample.json ${PROJECT_SOURCE_DIR}/sample2.json)
 
 add_subdirectory(cpp-jsonserializer)
 
